Fix issue with menu on mobile screen

--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -54,7 +54,7 @@ h1, h2, h3, h4, h5, h6 {
 main {
     flex: 1 0 auto;
     background-color: var(--color-background);
-    margin-top: 60px;
+    padding-top: 80px;
 }
 
 
